<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/quiz_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <TextView
            android:id="@+id/question1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question1"
            android:textSize="16sp"/>

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question1_option1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question1_option1"/>

            <RadioButton
                android:id="@+id/question1_option2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question1_option2"/>

            <RadioButton
                android:id="@+id/question1_option3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question1_option3"/>
        </RadioGroup>

        <TextView
            android:id="@+id/question2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question2"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/question2_answer"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="text"/>

        <TextView
            android:id="@+id/question3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question3"
            android:textSize="16sp"/>

        <CheckBox
            android:id="@+id/question3_option1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question3_option1"/>

        <CheckBox
            android:id="@+id/question3_option2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question3_option2"/>

        <CheckBox
            android:id="@+id/question3_option3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question3_option3"/>

        <CheckBox
            android:id="@+id/question3_option4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question3_option4"/>

        <TextView
            android:id="@+id/question4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question4"
            android:textSize="16sp"/>


        <EditText
            android:id="@+id/question4_answer"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="text"/>

        <TextView
            android:id="@+id/question5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question5"
            android:textSize="16sp"/>

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question5_option1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question5_option1"/>

            <RadioButton
                android:id="@+id/question5_option2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question5_option2"/>
        </RadioGroup>

        <Button
            android:id="@+id/submit_answers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submitAnswers"
            android:text="@string/submit_answers"/>

    </LinearLayout>
</ScrollView>